dark mode overlay fix

--- a/css/general.css
+++ b/css/general.css
@@ -32,8 +32,7 @@
 
 html {
   color-scheme: light;
-  background-color: var(--pink4);
-  background: var(--overlay);
+  background-color: var(--pink3);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -231,7 +230,7 @@ header {
 }
 
 .fade-in {
-  animation: fade-in 0.5s ease-in;
+  animation: fade-in 0.3s ease-in;
 }
 
 @media (max-width: 425px) {
